--- a/public/pages/subjects.html
+++ b/public/pages/subjects.html
@@ -9,16 +9,29 @@
 <body>
 <div id='container'>
 
-<h1>Twigs</h1>
-<h2>Subjects</h2>
+<h1 class='debug'>Twigs</h1>
+<h2 class='debug'>Subjects</h2>
 
-<ul id="sub_list">
-<!-- insert subject titles here -->
-</ul>
 
+  <div id="sub-list" class='debug'>
+
+
+  </div>
+
+
+<!-- templates -->
+<!-- for subject link -->
+<script type="text/template" id="subject-template">
+  <a href="http://localhost:3000/subject/<%= id %>"> <%= title %> </a>
+</script>
+
+
+
+</div>
+<link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript" src="/Users/apprentice/Desktop/twigs/public/backbone/application.js"></script>
 <script type="text/javascript" src="/Users/apprentice/Desktop/twigs/public/backbone/views/subjects.js"></script>
 <script type="text/javascript" src="/Users/apprentice/Desktop/twigs/public/backbone/models/subjects.js"></script>
-</div>
+
 </body>
 </html>
